--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-  from = "https://search.lenicyl.tk"
+  from = "https://matrix.lenicyl.tk"
   to = "https://matrix.to/#/#lenicyl:matrix.org"
   status = 301
   force = true
